--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/item_menu_find"
+        android:id="@+id/item_menu_predict"
         android:icon="@drawable/selector_camera"
         android:title="@string/menu_find" />
     <item
