--- a/app/src/main/res/layout/fragment_mark.xml
+++ b/app/src/main/res/layout/fragment_mark.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_mark"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
     <LinearLayout
         android:id="@+id/msg_empty"
@@ -33,6 +34,8 @@
         android:alpha="0"
         android:gravity="center"
         android:orientation="vertical"
+        android:visibility="gone"
+        tools:visibility="visible"
         tools:alpha="100">
 
         <com.airbnb.lottie.LottieAnimationView
